# dramaclaw

./: .env.example  .gitignore  .gitleaks.toml  Dockerfile  README.md  docker-compose.release.yml  docker-compose.selfhosted.release.yml  docker-compose.selfhosted.yml  license-inventory.csv  pyproject.toml  sbom.spdx.json
.github/workflows/: ci.yml  sync-to-gitee.yml
deploy/sandbox/linux-amd64/: codex-linux-sandbox
deploy/sandbox/linux-arm64/: codex-linux-sandbox
docs/: releasing.md
docs/en/: license.md
docs/en/reference/: environment-variables.md
docs/zh/: license.md
docs/zh/getting-started/: configuring-models.md
docs/zh/reference/: environment-variables.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
frontend/public/locales/en/: translation.json
frontend/public/locales/zh/: translation.json
frontend/public/petdex/: pets.json
frontend/src/: index.css  main.tsx  vite-env.d.ts
frontend/src/__tests__/api/: client.test.ts
frontend/src/__tests__/components/: themed-toaster.test.tsx
frontend/src/__tests__/hooks/: use-debounced-value.test.tsx  use-github-stars.test.ts
frontend/src/__tests__/lib/: chunk-load-recovery.test.ts  dev-backend-watch.test.ts  dom-reconciliation-guard.test.ts  gateway-error-classify.test.ts  release-notification-state.test.ts  reset-region-state.test.ts  script-feedback.test.ts  url-params.test.ts
frontend/src/__tests__/routes/: app-project-guard.test.tsx  auth-gating.test.ts  characters.ce.test.tsx  episodes-workbench-integration.test.ts  ingest-credit-cost-contract.test.ts  ingest-settings-save.test.tsx  script-source-editor-integration.test.ts  script-workflow-contract.test.ts  video-backend-options-contract.test.ts
frontend/src/api/: ops.ts
frontend/src/components/: GlobalErrorDialog.tsx  credit-cost-inline.tsx  identity-picker-dialog.tsx  themed-toaster.tsx
frontend/src/hooks/: use-debounced-value.ts  use-github-stars.ts  use-task-stream.ts  use-transient-confirmation.ts
frontend/src/i18n/: index.ts
frontend/src/lib/: api-errors.ts  api.ts  app-router.ts  app-version.ts  beat-markers.ts  desktop-download.test.ts  desktop-download.ts  dev-backend-watch.ts  dom-reconciliation-guard.ts  feature-models.ts  login-community.ts  mask-highlight.test.ts  mask-highlight.ts  platform.ts  query-keys.ts  release-notification-state.ts  reset-region-state.ts  script-feedback.ts  task-scope.test.ts  task-scope.ts  task-types.ts  url-params.ts  version-update-watch.ts
frontend/src/pipeline-import/: MaskEditor.tsx
frontend/src/routes/: __root.tsx  _app.tsx  login.tsx  watch.$work.tsx
frontend/src/stores/: app-store.ts  auth-store.ts  canvasStore.ts  project-nav-store.ts
frontend/src/task-center/: provider.tsx  task-errors.ts  types.ts
frontend/src/types/: task.ts
readme/: README_zh.md
scripts/: check_env_config.py  lint_banned_words.py  lint_ee_terms.py
scripts/compliance/: generate_p0b_artifacts.py
src/novelvideo/: __init__.py  cli.py  config.py  embedding_models.py  model_gateway_runtime.py  model_gateway_settings.py  newapi_provisioner.py  novel_source.py  official_defaults.py  project_config.py  release-notes.md  release_notes.py  sqlite_store.py  stage_asset_tasks.py  task_state.py
src/novelvideo/agents/: episode_planner.py  identity_planner.py  keyframe_prompt_builder.py
src/novelvideo/api/: __init__.py  app.py  schemas.py  viewer_manifests.py
src/novelvideo/chat/: hermes_workspace.py
src/novelvideo/cognee/: chapter_detector.py  concurrency.py  config.py  store.py
src/novelvideo/director_world/: control_frame_layers.py  paths.py  service.py
src/novelvideo/freezone/: audio_node.py  canvas_lock.py  canvas_static_urls.py  history.py  jobs.py  route_helpers.py  text_node.py  video_node.py
src/novelvideo/generators/: huimengi.py  nanobanana_grid.py  nanobanana_prop.py  pool_indexer.py  scene_reference_images.py  video_generator.py
src/novelvideo/ports/: __init__.py  release_feed.py  usage.py
src/novelvideo/render_plan/: ref_image_hash.py
src/novelvideo/security/: sandbox_wrap.py
src/novelvideo/seedance2_i2v/: character_voice_storage.py  panel_service.py
src/novelvideo/shared/: billing_errors.py
src/novelvideo/task_backend/: run_core.py  subprocesses.py
src/novelvideo/utils/: document_parsers.py  ref_image_hash.py  screenplay_quality.py  static_urls.py
src/novelvideo/verification/: episode_reviewer.py  routes.py  sketch_color_verifier.py  sketch_edit_execute.py  task_services.py
tests/: test_api_assets.py  test_api_episode_detail.py  test_api_ingest_chapter_preview.py  test_api_model_credit_cost.py  test_api_novel_prerequisites.py  test_api_render_regenerate.py  test_api_render_settings.py  test_api_seedance2_prompt_route.py  test_api_sketch_ai_detection.py  test_chat_service_user_agent_scope.py  test_cli_cognee_commands.py  test_cognee_llm_config_refresh.py  test_cognee_pipeline_concurrency.py  test_cognee_store_close.py  test_format_check.py  test_freezone_audio_backend.py  test_freezone_canvas_generation_history.py  test_freezone_image_backend.py  test_freezone_video_backend.py  test_freezone_video_story_backend.py  test_freezone_video_upscale_backend.py  test_hermes_workspace.py  test_history_asset_model_mode.py  test_identity_planner_appearance_validation.py  test_indextts2_beat_audio_task.py  test_indextts2_fal.py  test_model_gateway_settings.py  test_newapi_image_gateway.py  test_project_embedding_models.py  test_release_feed.py  test_scene_reference_prompt.py  test_seedance2_panel_service_narration_audio.py  test_seedance2_request.py  test_spa_static_serving.py  test_sqlite_store.py  test_superpower_model_config.py  test_task_backend_celery_metadata.py  test_task_credit_errors.py  test_task_state_restart_reconcile.py  test_task_video_runner_returned_last_frame.py
tests/contract/: test_l014_inline_task_backend_concurrency.py  test_m01_auth.py  test_m03_episodes_scripts_content.py  test_m03_task_completion.py  test_m04_route_contracts.py  test_m05_route_contracts.py  test_m06_route_contracts.py  test_m07_tasks.py
(+217 files in other folders)
